--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     display: flex;
     flex-direction: column;
+    font-family: Roboto, Arial, Helvetica;
 }
 
 .sec1, .sec2, .sec3 {
@@ -8,9 +9,18 @@ body {
     flex-direction: column;
 }
 
+.sec1 {
+    background-color: #1F2937;
+}
+
 .header {
     display: flex;
     justify-content: space-around;
+}
+
+.hLogoText {
+    font-size: 24px;
+    color: #F9FAF8;
 }
 
 ul {
@@ -23,6 +33,8 @@ ul {
 
 a {
     text-decoration: none;
+    font-size: 18px;
+    color: #E5E7EB;
 }
 
 .content {
@@ -34,20 +46,33 @@ a {
 }
 
 .cLargeText {
-
+    font-size: 48px;
+    color: #F9FAF8;
+    font-weight: 900;
 }
 
 .cSmallText {
-
+    font-size: 18px;
+    color: #E5E7EB;
 }
 
 .cButton {
+    border-color: #F9FAF8;
+}
 
+button {
+    background-color: #3882F6;
+    color: #F9FAF8;
 }
 
 .cImage {
     border: 1px solid black;
     width: 400px;
+    background-color: grey;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #E5E7EB;
 }
 
 .topText {
@@ -97,5 +122,5 @@ a {
 }
 
 .fText {
-    
+
 }
